Blackpurl/src/objects/Activity_History_Template__mdt.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Entity__c</fullName>
        <label>Alternate Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Code__c</fullName>
        <label>Color Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Text_Template__c</fullName>
        <label>Feed Text Template</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields_To_Query__c</fullName>
        <label>Fields To Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Entity__c</fullName>
        <label>Source Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Activity History Template</label>
    <listViews>
        <fullName>All_Templates</fullName>
        <columns>MasterLabel</columns>
        <columns>Action__c</columns>
        <columns>Source_Entity__c</columns>
        <columns>Alternate_Entity__c</columns>
        <columns>Fields_To_Query__c</columns>
        <columns>Feed_Text_Template__c</columns>
        <columns>Color_Code__c</columns>
        <columns>IsProtected</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <label>All Templates</label>
    </listViews>
    <pluralLabel>Activity History Templates</pluralLabel>
</CustomObject>